--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 addopts = "-ra -q"
 testpaths = [
-    "tests",
+    "tests"
 ]
 
 [tool.mypy]
