Added pandas to requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ testing =
     pytest>=6.0
     pytest-cov>=2.0
     flake8>=3.9
+    pandas>=1.2.0
 
 [options.package_data]
 dashboard = py.typed
